--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,15 @@
 [package]
-name = "svg_widgets"
+name = "fltk-extras"
 version = "0.1.0"
+authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "Some extra widgets for fltk-rs"
+repository = "https://github.com/MoAlyousef/fltk-extras"
+documentation = "https://docs.rs/fltk-extras"
+keywords = ["gui", "ui", "widgets", "bindings", "graphics"]
+categories = ["gui"]
+readme = "README.md"
+license = "MIT"
 
 [dependencies]
-fltk = "1.3.16"
+fltk = "1.3.17"
