--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "fltk-extras"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
 edition = "2021"
+rust-version = "1.56"
 description = "Some extra widgets for fltk-rs"
-repository = "https://github.com/MoAlyousef/fltk-extras"
+repository = "https://github.com/fltk-rs/fltk-extras"
 documentation = "https://docs.rs/fltk-extras"
 keywords = ["gui", "ui", "widgets", "bindings", "graphics"]
 categories = ["gui"]
@@ -12,4 +13,4 @@ readme = "README.md"
 license = "MIT"
 
 [dependencies]
-fltk = "1.3.17"
+fltk = "1.4.0"
