--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fltk-extras"
-version = "0.1.3"
+version = "0.1.4"
 authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
 edition = "2021"
 rust-version = "1.56"
@@ -14,3 +14,4 @@ license = "MIT"
 
 [dependencies]
 fltk = "1.4.0"
+tiny-skia = "0.11"
